--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<p>Gold Medalist in the Bachelor degree, looking forward to learn new things in the corporate.</p>
 					<hr>
 				<h4>Top Expertise</h4>
-				<p>Full stack developer with the main focus on Django and React <a target="_blank" href="Tushar-Resume.pdf">Download Resume</a> </p>
+				<p>Full stack developer with the main focus on Django and React <a target="_blank" href="Darshan-Resume.pdf">Download Resume</a> </p>
 				<div id="skills">
 					<ul>
 						<li>Python</li>
